--- a/templates/materiales/categoria/formulario.crear.html
+++ b/templates/materiales/categoria/formulario.crear.html
@@ -108,7 +108,7 @@
             <thead class="thead-dark">
                 <tr>
                     <th scope="col">Nombre categoria</th>
-                    <th scope="col">Codigo</th>
+                    <th scope="col">Partida</th>
                     <th scope="col">Fecha</th>
 
                     <th scope="col">Acciones</th>
