--- a/templates/materiales/inventarioFisico.html
+++ b/templates/materiales/inventarioFisico.html
@@ -35,7 +35,7 @@
     }
 </style>
 
-<h2 style="text-align: center;">Inventario Fiscio</h2>
+<h2 style="text-align: center;">Inventario Fisico</h2>
 <div class="container mt-4">
 
     <div class="table-responsive">
