megorando el cpodigo de create user

--- a/templates/base.html
+++ b/templates/base.html
@@ -198,6 +198,13 @@
                                             <ul class="collapse show nav flex-column ms-1" id="submenu2"
                                                 data-bs-parent="#menu">
                                                 <li>
+                                                    <a href="{% url 'reportePartida' %}"
+                                                        class="nav-link px-0 align-middle">
+                                                        <i class="bi bi-cart"></i> <span
+                                                            class="ms-1 d-none d-sm-inline">Reporte
+                                                            Partidas</span></a>
+                                                </li>
+                                                <li>
                                                     <a href="{% url 'reporte_pedido_salida' %}"
                                                         class="nav-link px-0 align-middle">
                                                         <i class="bi bi-cart"></i> <span
