--- a/templates/pedidos/mis_pedidos.html
+++ b/templates/pedidos/mis_pedidos.html
@@ -1,25 +1,29 @@
 {% extends '../base.usuarios.html' %}
 {% load static %}
+
 {% block usuario %}
 <style>
-    th{
+    th {
         background-color: #082E33 !important;
         color: rgb(241, 238, 238) !important;
     }
-    h2{
+
+    h2 {
         color: white;
-        
-    
         font-weight: bold;
     }
-    .row{
+
+    .row {
         color: white;
         font-weight: bold;
     }
 </style>
+
+<!-- DataTables CSS -->
+<link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
+
 <div class="container mt-2">
     <form method="POST" class="mb-3" action="{% url 'mis_pedidos' %}">
-
         {% csrf_token %}
         <div class="row">
             <div class="col">
@@ -45,27 +49,21 @@
         </select>
     </form>
 
-
     <div class="text-center">
-        <h2>{{ title}}</h2>
+        <h2>{{ title }}</h2>
     </div>
     <div>
         {{ error }}
     </div>
-    <table class="table table-striped">
+
+    <table id="tablaPedidos" class="table table-striped">
         <thead>
             <tr>
-                <th>Codigo Pedido</th>
                 <th>Codigo</th>
-                <th>Material</th>
-                <th>descripcion</th>
-
-                <th>Cantidad de pedido</th>
-                <th>Cantidad de entrega</th>
+                <th>Nombre completo</th>
+                <th>Oficina</th>
                 <th>Fecha</th>
-                <th>Accion</th>
-
-
+                <th>Informacion</th>
             </tr>
         </thead>
         <tbody>
@@ -74,29 +72,24 @@
                 <td>{{ pedido.numero_pedido }}</td>
                 <td>{{ pedido.material.codigo }}</td>
                 <td>{{ pedido.material.nombre }}</td>
-                <td>{{ pedido.descripcion }}</td>
-                <td>{{ pedido.cantidad_pedida }}</td>
-                <td>{{ pedido.cantidad_entrega }}</td>
                 <td>{{ pedido.fecha_pedido|date:"m/d/y" }}</td>
                 <td>
-                    <button onclick="mostrar_aprobaciones_pedido('{{pedido.id}}')"
-                        class='btn btn-success btn-sm'>Informacion</button>
-                    <a href="{%url 'eliminar_mi_pedido' pedido.id %}" class='btn btn-danger btn-sm'>Cancelar pedido</a>
+                    <a href="{% url 'mostrarPedidosRealizados' pedido.numero_pedido %}"
+                        class="btn btn-success">Informacion</a>
                 </td>
             </tr>
             {% endfor %}
         </tbody>
-
     </table>
+
     {% include 'paginador/paginador.html' %}
 </div>
 
-
+<!-- Modal para detalles del pedido -->
 <div class="modal fade" id="infoModal" tabindex="-1" aria-labelledby="infoModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-
                 <h5 class="modal-title" id="infoModalLabel">Información del Pedido</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
@@ -109,12 +102,11 @@
                                 <th scope="col">Unidad</th>
                                 <th scope="col">Cargo</th>
                                 <th scope="col">Estado</th>
-                                <th scope="col">Fecha de aprobacion</th>
-
+                                <th scope="col">Fecha de aprobación</th>
                             </tr>
                         </thead>
                         <tbody id="tbody_table">
-                            <!-- Aquí se cargarán dinámicamente los datos -->
+                            <!-- Se cargan dinámicamente -->
                         </tbody>
                     </table>
                 </div>
@@ -126,17 +118,20 @@
     </div>
 </div>
 
-
-
-
-
-
 {% endblock usuario %}
 
 {% block js %}
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- DataTables JS -->
+<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+
+<!-- DataTables en español -->
+<script src="https://cdn.datatables.net/plug-ins/1.13.6/i18n/es-ES.json"></script>
+
 <script src="{% static 'js/listar_aprobaciones.js' %}"></script>
 <script src="{% static 'js/alertas.js' %}"></script>
-
 
 <script>
     document.addEventListener("DOMContentLoaded", function () {
@@ -150,9 +145,16 @@
         if (!document.getElementById('fecha_fin').value) {
             document.getElementById('fecha_fin').value = formattedDate;
         }
+
+        // Inicializar DataTables
+        $('#tablaPedidos').DataTable({
+            language: {
+                url: "//cdn.datatables.net/plug-ins/1.13.6/i18n/es-ES.json"
+            },
+            pageLength: 10,
+            lengthMenu: [[10, 20, 50, 100, 200], [10, 20, 50, 100, 200]],
+            order: []
+        });
     });
-
-
 </script>
-
 {% endblock js %}
