--- a/templates/materiales/reportePartida.html
+++ b/templates/materiales/reportePartida.html
@@ -28,7 +28,7 @@
         {% csrf_token %}
         <div class="col-md-4">
             <label for="categoria" class="form-label">Categoría</label>
-            <select name="categoria" id="categoria" class="form-select">
+            <select name="categoria" id="categoria" class="form-select" required>
                 <option value="">-- Todas las categorías --</option>
                 {% for cat in categorias %}
                 <option value="{{ cat.pk }}" {% if request.GET.categoria == cat.pk|stringformat:"s" %}selected{% endif %}>
@@ -41,12 +41,12 @@
         <div class="col-md-3">
             <label for="fecha_inicio" class="form-label">Fecha de inicio</label>
             <input type="date" name="fecha_inicio" id="fecha_inicio" class="form-control"
-                value="{{ request.GET.fecha_inicio }}">
+                value="{{ request.GET.fecha_inicio }}" required>
         </div>
 
         <div class="col-md-3">
             <label for="fecha_fin" class="form-label">Fecha de fin</label>
-            <input type="date" name="fecha_fin" id="fecha_fin" class="form-control" value="{{ request.GET.fecha_fin }}">
+            <input type="date" name="fecha_fin" required id="fecha_fin" class="form-control" value="{{ request.GET.fecha_fin }}">
         </div>
 
         <div class="col-md-2 d-flex align-items-end">
@@ -62,7 +62,7 @@
                     <th colspan="2">Saldo</th>
                     <th colspan="2">Entradas</th>
                     <th colspan="2">Salidas</th>
-                    <th colspan="1">Saldo</th>
+                    <th colspan="2">Saldo</th>
 
                 </tr>
                 <tr>
@@ -77,6 +77,7 @@
 
                     <th>Costo Total (Salida)</th>
                     <th>Saldo Final (Cant.)</th>
+                    <th>Cant.</th>
                     <th>Saldo Final (Costo)</th>
                 </tr>
             </thead>
@@ -88,13 +89,13 @@
                     <td>{{ item.unidad }}</td>
                     <td>{{ item.saldo_cantidad }}</td>
                     <td>{{ item.saldo_costo }}</td>
-                    <td>{{ item.entradas }}</td>
-                    <td>{{ item.cantidad_ingresos }}</td>
-                    <td>{{ item.costo_ingresos }}</td>
-                    <td>{{ item.salidas }}</td>
-                    <td>{{ item.costo_salidas }}</td>
-                    <td>{{ item.saldo_final_cantidad }}</td>
-                    <td>{{ item.saldo_final_costo }}</td>
+                    <td>{{ item.cantidadIngresos }}</td>
+                    <td> {{item.costoIngresos}}</td>
+                    <td>{{ item.cantidad_salida }}</td>
+                    <td>{{ item.costoSalida }}</td>
+                    
+                    <td>{{ item.cant }}</td>
+                    <td>{{ item.saldo }}</td>
                 </tr>
                 {% empty %}
                 <tr>
